[package]
name = "ecosystem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
thiserror = "1.0.64"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter",
    "time",
    "local-time"] }
time = { version = "0.3.7", features = ["macros"] }

[dev-dependencies]
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
axum = { version = "0.7.6", features = ["query", "tracing"] }
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros"] }
