[package]
name = "ecosystem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
thiserror = "1.0.64"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter",
    "time",
    "local-time"] }
time = { version = "0.3.7", features = ["macros"] }
opentelemetry-otlp = { version = "0.25.0", features = ["tonic"] }
opentelemetry = "0.25.0"
opentelemetry_sdk = { version = "0.25.0", features = ["rt-tokio"] }
tracing-opentelemetry = "0.26.0"
derive_builder = "0.20.1"
chrono = { version = "0.4.38", features = ["serde"] }
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }
base64 = "0.22.1"
chacha20poly1305 = "0.10.1"
serde_with = "3.9.0"
bytes = "1.7.2"

[dev-dependencies]
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
axum = { version = "0.7.6", features = ["query", "tracing"] }
tokio = { version = "1.38.1", features = ["rt", "rt-multi-thread", "macros"] }
derive_builder = "0.20.1"
derive_more = { version = "1.0.0", features = ["add","from","display","into"] }
strum = { version = "0.26.3", features = ["derive"] }
http = "1.1.0"
